Various potential bugs fixed from FindBugs reporting tool.